testsuite/tests/typecheck/should_fail/tcfail213.hs
{-# LANGUAGE TypeFamilies, ConstraintKinds #-}
module ShouldFail where

type family F a :: Constraint

class (F a) => C a where
